--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Feliz Año Nuevo, María</title>
+  <title></title>
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
@@ -327,3 +331,4 @@ Que lo empieces con buena actitud`
   </script>
 </body>
 </html>
+
